Add function to toggle read status

--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
     <div id="main">
         <button id="add">Add book</button>
         <div id="form-popup">
-            <form>
+            <form id="form">
                 <h1>Add a new book</h1>
                 <input type="text" id="title" name="title" placeholder="Title"><br>
                 <input type="text" id="author" name="author" placeholder="Author"><br>
                 <label for="read">Have you read it?</label>
                 <input type="checkbox" id="read" name="read"><br>
                 <input type="button" id="submit" value="Submit">
-                <button id="close">Close</button>
+                <button type ="button" id="close">Close</button>
             </form>    
         </div>
+
         <table id="table">
             <tr>
                 <th>Title</th>
