--- a/index.html
+++ b/index.html
@@ -36,5 +36,13 @@
             </tr>
         </table>
     </div>
+
+    <footer>Copyright ©
+        <script>
+          document.write(new Date().getFullYear())
+        </script>
+        Louis Atkinson
+    </footer>
+    
 </body>
 </html>
